[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "car-bench-exp-agent"
version = "0.1.0"
description = "Purple CAR-bench agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.5",
    "litellm>=1.82.3,<1.82.7",
    "loguru>=0.7.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "tomli-w>=1.0.0",
]

[tool.uv]
package = false
